# Tab5duino-idf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ESP32P4_PLATFORMIO_FIX.md  ESP32P4_TROUBLESHOOTING.md  INSTALL.md  LICENSE  README.md  RELEASE_SUMMARY.md  SECURITY.md  Tab5duino.h  library.json  platform.json  platformio_esp32p4.ini  release_package.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
boards/: m5tab5.json  m5tab5_p4.json
builder/: main.py  upload_esp32p4.py
examples/: lvgl_migration_guide.md  m5tab5_ethernet_example.ino
examples/HelloTab5/: HelloTab5.ino  platformio.ini
examples/esp32p4_basic/: platformio.ini
examples/esp32p4_basic/src/: main.cpp
examples/esp32p4_native_idf/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  upload_esp32p4.py
examples/esp32p4_native_idf/main/: CMakeLists.txt  main.cpp
examples/lvgl_basic/: main.cpp  platformio.ini
examples/lvgl_performance/: main.cpp
examples/tab5_hardware_test/: platformio.ini
examples/tab5_hardware_test/src/: main.cpp
framework/: library.json  package.json
framework/components/lvgl/: CMakeLists.txt  idf_component.yml
framework/cores/tab5duino/: Arduino.cpp  Arduino.h  Tab5duino.cpp
framework/cores/tab5duino/hal/: audio_hal.h  display_hal.h  imu_hal.h
framework/libraries/LVGL/: README.md  library.json  lv_conf.h  lvgl_tab5duino.cpp  lvgl_tab5duino.h
framework/variants/m5tab5/: pins_arduino.h
hal/: power_hal.h  touch_hal.h
